--- a/sky.ipynb
+++ b/sky.ipynb
@@ -9,11 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "from pgmpy.models import BayesianModel\n",
+    "from pgmpy.factors.discrete import TabularCPD\n",
+    "from pgmpy.inference import VariableElimination\n",
+    "from pgmpy.sampling import BayesianModelSampling"
    ]
   },
   {
@@ -25,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +156,7 @@
        "4        P38    0    0    0    0    0     0     0    0    0     0    0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +277,7 @@
        "4  1.0  0.0  1.0  0.0  0.0   0.0   0.0  0.0  0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
