--- a/sky.ipynb
+++ b/sky.ipynb
@@ -9,16 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "from pgmpy.models import BayesianModel\n",
-    "from pgmpy.factors.discrete import TabularCPD\n",
-    "from pgmpy.inference import VariableElimination\n",
-    "from pgmpy.sampling import BayesianModelSampling\n",
     "from itertools import product\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -32,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +52,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Akt</th>\n",
        "      <th>Erk</th>\n",
        "      <th>Jnk</th>\n",
@@ -73,7 +68,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Akt</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -88,7 +82,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Erk</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -103,7 +96,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Jnk</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -118,7 +110,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Mek</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -133,7 +124,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>P38</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -148,7 +138,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>PIP2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -163,7 +152,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>PIP3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -178,7 +166,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>PKA</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -193,7 +180,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>PKC</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -208,7 +194,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Plcg</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -223,7 +208,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Raf</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -241,33 +225,34 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Akt  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC  Plcg  Raf\n",
-       "0         Akt    0    0    0    0    0     0     0    0    0     0    0\n",
-       "1         Erk    0    0    0    0    0     0     0    0    0     0    0\n",
-       "2         Jnk    0    0    0    0    0     0     0    0    0     0    0\n",
-       "3         Mek    0    1    0    0    0     0     0    0    0     0    0\n",
-       "4         P38    0    0    0    0    0     0     0    0    0     0    0\n",
-       "5        PIP2    0    0    0    0    0     0     0    0    1     0    0\n",
-       "6        PIP3    1    0    0    0    0     1     0    0    0     1    0\n",
-       "7         PKA    1    1    1    1    1     0     0    0    0     0    1\n",
-       "8         PKC    0    0    1    1    1     0     0    0    0     0    1\n",
-       "9        Plcg    0    0    0    0    0     1     0    0    1     0    0\n",
-       "10        Raf    0    0    0    1    0     0     0    0    0     0    0"
+       "    Akt  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC  Plcg  Raf\n",
+       "0     0    0    0    0    0     0     0    0    0     0    0\n",
+       "1     0    0    0    0    0     0     0    0    0     0    0\n",
+       "2     0    0    0    0    0     0     0    0    0     0    0\n",
+       "3     0    1    0    0    0     0     0    0    0     0    0\n",
+       "4     0    0    0    0    0     0     0    0    0     0    0\n",
+       "5     0    0    0    0    0     0     0    0    1     0    0\n",
+       "6     1    0    0    0    0     1     0    0    0     1    0\n",
+       "7     1    1    1    1    1     0     0    0    0     0    1\n",
+       "8     0    0    1    1    1     0     0    0    0     0    1\n",
+       "9     0    0    0    0    0     1     0    0    1     0    0\n",
+       "10    0    0    0    1    0     0     0    0    0     0    0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('dataset/consensus_adj_mat.csv')\n",
-    "df"
+    "df = df.drop(columns=['Unnamed: 0'])\n",
+    "df "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -305,85 +290,176 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>848</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>849</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>851</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>853 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Akt  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC\n",
-       "0  0.0  0.0  1.0  0.0  1.0   0.0   1.0  0.0  1.0\n",
-       "1  0.0  0.0  1.0  0.0  0.0   0.0   0.0  0.0  0.0\n",
-       "2  0.0  0.0  0.0  1.0  0.0   0.0   0.0  0.0  0.0\n",
-       "3  0.0  0.0  0.0  1.0  0.0   0.0   0.0  0.0  0.0\n",
-       "4  1.0  0.0  1.0  0.0  0.0   0.0   0.0  0.0  0.0"
+       "     Akt  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC\n",
+       "0      0    0    1    0    1     0     1    0    1\n",
+       "1      0    0    1    0    0     0     0    0    0\n",
+       "2      0    0    0    1    0     0     0    0    0\n",
+       "3      0    0    0    1    0     0     0    0    0\n",
+       "4      1    0    1    0    0     0     0    0    0\n",
+       "..   ...  ...  ...  ...  ...   ...   ...  ...  ...\n",
+       "848    0    0    0    0    0     0     0    0    1\n",
+       "849    0    0    1    0    1     0     1    0    0\n",
+       "850    0    0    0    1    0     0     1    0    0\n",
+       "851    0    0    0    0    1     0     1    0    1\n",
+       "852    0    0    0    0    1     1     0    0    1\n",
+       "\n",
+       "[853 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_1 = pd.read_csv('dataset/sachs_bin.csv')\n",
-    "df_1.head()"
+    "df_1 = df_1.astype(int)\n",
+    "akt_obs = df_1['Akt']\n",
+    "erk_obs = df_1['Erk']\n",
+    "jnk_obs = df_1['Jnk']\n",
+    "mek_obs = df_1['Mek']\n",
+    "p38_obs = df_1['P38']\n",
+    "pip2_obs = df_1['PIP2']\n",
+    "pip3_obs = df_1['PIP3']\n",
+    "pka_obs = df_1['PKA']\n",
+    "pkc_obs = df_1['PKC']\n",
+    "df_1"
    ]
   },
   {
@@ -395,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
