--- a/ellen.ipynb
+++ b/ellen.ipynb
@@ -451,17 +451,94 @@
     "sachs_bin = sachs_bin.astype(int) # convert to integer\n",
     "\n",
     "# Convert each columun into a observed data vector:\n",
-    "Akt_obs = sachs_bin['Akt']\n",
-    "Erk_obs = sachs_bin['Erk']\n",
-    "Jnk_obs = sachs_bin['Jnk']\n",
-    "Mek_obs = sachs_bin['Mek']\n",
-    "P38_obs = sachs_bin['P38']\n",
-    "Plcg_obs = sachs_bin['Plcg']\n",
-    "Raf_obs = sachs_bin['Raf']\n",
-    "Mek_Erk_obs = sachs_bin['Mek_Erk']\n",
-    "Plcg_Erk_obs = sachs_bin['Plcg_Erk']\n",
+    "X1_obs = sachs_bin['Akt']\n",
+    "X2_obs = sachs_bin['Erk']\n",
+    "X3_obs = sachs_bin['Jnk']\n",
+    "X4_obs = sachs_bin['Mek']\n",
+    "X5_obs = sachs_bin['P38']\n",
+    "X6_obs = sachs_bin['PIP2']\n",
+    "X7_obs = sachs_bin['PIP3']\n",
+    "X8_obs = sachs_bin['PKA']\n",
+    "X9_obs = sachs_bin['PKC']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CPD's"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_7 = PIP3\n",
+    "p_x7 = X7_obs.sum() / len(X7_obs)\n",
+    "p_x7 = np.array([p_x7, 1-p_x7])\n",
     "\n",
-    "sachs_bin"
+    "# X_8 = PKA\n",
+    "p_x8 = X8_obs.sum() / len(X8_obs)\n",
+    "p_x8 = np.array([p_x8, 1-p_x8])\n",
+    "\n",
+    "print (\"p(X7) =\", p_x7) # [0.37045721 0.62954279]\n",
+    "print (\"p(X8) =\", p_x8) # [0.30832356 0.69167644]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_conditional_probabilities(Xi_obs, parents, alpha):\n",
+    "    \"\"\"\n",
+    "    Calculate conditional probabilities P(X1 | X7, X8) using Bayes' theorem.\n",
+    "\n",
+    "    inputs:\n",
+    "    Xi_obs (pd.Series): Observed data vector for the target variable Xi.\n",
+    "    parents (np.ndarray): Binary vector indicating the parents (can be 1 or 2) of Xi.\n",
+    "    alpha (float): The alpha parameter = 0.5\n",
+    "\n",
+    "    Returns:\n",
+    "    pd.DataFrame: DataFrame containing the conditional probabilities.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    p_Xi_1 = Xi_obs.sum() / len(Xi_obs) # P(Xi)\n",
+    "    p_Xi = np.array([1- p_Xi_1, p_Xi_1]) # P(Xi = 0), P(Xi = 1)\n",
+    "\n",
+    "    # Initialize an empty DataFrame to store the conditional probabilities\n",
+    "    cond_prob_df = pd.DataFrame(index=[f\"PIP3^{i}, PKA$^{j}$\" for i in range(2) for j in range(2)], columns=[f'Akt$^{i}$' for i in range(2)])\n",
+    "\n",
+    "    # Calculate joint probabilities of X_7 and X_8 given each possible value of X_1\n",
+    "    for x in [0,1]:\n",
+    "\n",
+    "\n",
+    "        # compute P(Pa |Xi = x) \n",
+    "        \n",
+    "        p_Pa_Xi = 1 - alpha ** (1 + np.sum(parents, axis=0)) if x == 1 else alpha ** (1 + np.sum(parents, axis=0))\n",
+    "        \n",
+    "        \n",
+    "        print (p_Pa_Xi)\n",
+    "\n",
+    "        p_Pa = np.sum(p_Pa_Xi * p_Xi[x])\n",
+    "        \n",
+    "        \n",
+    "        p_Xi_Pa = p_Pa_Xi * p_Xi / p_Pa\n",
+    "        \n",
+    "        \n",
+    "        # Fill in the conditional probabilities table\n",
+    "        \n",
+    "        for Pa1 in [0, 1]:\n",
+    "            for Pa2 in [0, 1]:\n",
+    "                cond_prob_df.loc[f\"PIP3^{Pa1}, PKA$^{Pa2}$\", f'Akt$^{x}$'] = p_Xi_Pa[Pa1 * 2 + Pa2]\n",
+    "\n",
+    "    return cond_prob_df\n",
+    "# Example usage\n",
+    "calculate_conditional_probabilities(X1_obs, [X7_obs, X8_obs], 0.5)\n",
+    "\n"
    ]
   },
   {
