--- a/alex.ipynb
+++ b/alex.ipynb
@@ -270,9 +270,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def forward(alpha):\n",
+    "def forward(alpha, n):\n",
     "    lst = []\n",
-    "    for elm in range(0, 100):\n",
+    "    for elm in range(0, n):\n",
     "        lst.append(simulate_binomial(alpha))\n",
     "    df=pd.DataFrame(lst,columns=['X1','X2','X3','X4','X5','X6','X7','X8','X9','X10','X11'])\n",
     "    return(df)"
@@ -296,7 +296,7 @@
    ],
    "source": [
     "# Calculate the percentage of 1's for each column\n",
-    "percentages = forward(0.5).mean() * 100  # mean() calculates the proportion of 1s, multiplying by 100 gives the percentage\n",
+    "percentages = forward(0.5, 100).mean() * 100  # mean() calculates the proportion of 1s, multiplying by 100 gives the percentage\n",
     "\n",
     "# Plotting\n",
     "fig, ax = plt.subplots()\n",
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
