--- a/sky.ipynb
+++ b/sky.ipynb
@@ -567,65 +567,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Node  Erk  Jnk  Mek  P38  PIP2  PIP3  PKA  PKC  Plcg  Raf\n",
-       "PIP3  0    0    0    0    1     0     0    0    1     0      1.0\n",
-       "PKA   1    1    1    1    0     0     0    0    0     1      1.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_adj.groupby('Node').value_counts(normalize=True).loc[:, 1]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Mek', 'Erk'),\n",
-       " ('PIP2', 'PKC'),\n",
-       " ('PKC', 'Jnk'),\n",
-       " ('PKC', 'Mek'),\n",
-       " ('PKC', 'P38'),\n",
-       " ('PKC', 'Raf'),\n",
-       " ('PIP3', 'Akt'),\n",
-       " ('PIP3', 'PIP2'),\n",
-       " ('PIP3', 'Plcg'),\n",
-       " ('Plcg', 'PIP2'),\n",
-       " ('Plcg', 'PKC'),\n",
-       " ('PKA', 'Akt'),\n",
-       " ('PKA', 'Erk'),\n",
-       " ('PKA', 'Jnk'),\n",
-       " ('PKA', 'Mek'),\n",
-       " ('PKA', 'P38'),\n",
-       " ('PKA', 'Raf'),\n",
-       " ('Raf', 'Mek')]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mek Erk\n",
+      "PIP2 PKC\n",
+      "PKC Jnk\n",
+      "PKC Mek\n",
+      "PKC P38\n",
+      "PKC Raf\n",
+      "PIP3 Akt\n",
+      "PIP3 PIP2\n",
+      "PIP3 Plcg\n",
+      "Plcg PIP2\n",
+      "Plcg PKC\n",
+      "PKA Akt\n",
+      "PKA Erk\n",
+      "PKA Jnk\n",
+      "PKA Mek\n",
+      "PKA P38\n",
+      "PKA Raf\n",
+      "Raf Mek\n"
+     ]
     }
    ],
    "source": [
     "lst_e = []\n",
     "for x in G.edges:\n",
     "    list.append(lst_e, x)\n",
-    "lst_e\n"
+    "lst_e\n",
+    "\n",
+    "for e in lst_e:\n",
+    "    print(e[0], e[1])"
    ]
   },
   {
