--- a/sky.ipynb
+++ b/sky.ipynb
@@ -567,13 +567,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('PIP3', 'Akt'),\n",
+       " ('PKA', 'Akt'),\n",
+       " ('Mek', 'Erk'),\n",
+       " ('PKA', 'Erk'),\n",
+       " ('PKC', 'Jnk'),\n",
+       " ('PKA', 'Jnk'),\n",
+       " ('PKC', 'Mek'),\n",
+       " ('PKA', 'Mek'),\n",
+       " ('Raf', 'Mek'),\n",
+       " ('PKC', 'P38'),\n",
+       " ('PKA', 'P38'),\n",
+       " ('PIP3', 'PIP2'),\n",
+       " ('Plcg', 'PIP2'),\n",
+       " ('PIP2', 'PKC'),\n",
+       " ('Plcg', 'PKC'),\n",
+       " ('PIP3', 'Plcg'),\n",
+       " ('PKC', 'Raf'),\n",
+       " ('PKA', 'Raf')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst_edges = []\n",
+    "for x in G.edges:\n",
+    "    list.append(lst_edges, x)\n",
+    "lst_edges.sort(key=lambda x: x[1])\n",
+    "lst_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Akt', ['PIP3', 'PKA']]\n",
       "Akt\n",
       "['PIP3', 'PKA']\n",
       "Erk\n",
@@ -596,11 +638,6 @@
     }
    ],
    "source": [
-    "lst_edges = []\n",
-    "for x in G.edges:\n",
-    "    list.append(lst_edges, x)\n",
-    "lst_edges.sort(key=lambda x: x[1])\n",
-    "\n",
     "parents = []\n",
     "for edge in lst_edges:\n",
     "    node_exists = [item for item in parents if item[0] == edge[1]]\n",
@@ -611,12 +648,6 @@
     "\n",
     "# print(parents[0])\n",
     "\n",
-    "\n",
-    "total_parents = []\n",
-    "for node_list in parents:\n",
-    "    node = node_list[0]\n",
-    "    parent_nodes = node_list[1]\n",
-    "    \n",
     "cond_prob = []\n",
     "for node_list in parents:\n",
     "    node = node_list[0]\n",
@@ -631,6 +662,45 @@
    "metadata": {},
    "source": [
     "Forward simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "calculate_values() missing 1 required positional argument: 'parents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m             node_values[node] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, p\u001b[38;5;241m=\u001b[39mp_x)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m node_values\n\u001b[1;32m---> 12\u001b[0m \u001b[43mcalculate_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconditional_probability\u001b[39m(node_values, node1, node2):\n\u001b[0;32m     15\u001b[0m     node1_values \u001b[38;5;241m=\u001b[39m node_values[node1]\n",
+      "\u001b[1;31mTypeError\u001b[0m: calculate_values() missing 1 required positional argument: 'parents'"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_values(parents):\n",
+    "    node_values = {}\n",
+    "    for node, parent_nodes in parents:\n",
+    "        if not parent_nodes:  # node has no parents\n",
+    "            node_values[node] = np.random.binomial(n=1, p=0.5)\n",
+    "        else:  # node has parents\n",
+    "            parent_values = sum(node_values[parent] for parent in parent_nodes)\n",
+    "            p_x = 1 - 0.5 ** (1 + parent_values)\n",
+    "            node_values[node] = np.random.binomial(n=1, p=p_x)\n",
+    "    return node_values\n",
+    "\n",
+    "calculate_values()\n",
+    "\n",
+    "def conditional_probability(node_values, node1, node2):\n",
+    "    node1_values = node_values[node1]\n",
+    "    node2_values = node_values[node2]\n",
+    "    count_node1_true = sum(value == 1 for value in node1_values)\n",
+    "    count_both_true = sum(node1_value == node2_value == 1 for node1_value, node2_value in zip(node1_values, node2_values))\n",
+    "    return count_both_true / count_node1_true if count_node1_true != 0 else 0"
    ]
   },
   {
